[gd_scene load_steps=2 format=3 uid="uid://dd1gfs2qqexo2"]

[ext_resource type="Script" path="res://ui/choose/choose_tools.gd" id="1_o7sj8"]

[node name="choose_toolS" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7sj8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="basketball" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "篮球"

[node name="football" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "足球"

[node name="tennis" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "网球"

[node name="volleyball" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "排球"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="stick1" type="CheckBox" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "魔法宝石1"

[node name="stick2" type="CheckBox" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "魔法宝石2"

[node name="stick3" type="CheckBox" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "魔法宝石3"

[connection signal="toggled" from="HBoxContainer/VBoxContainer/basketball" to="." method="_on_basketball_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/football" to="." method="_on_football_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/tennis" to="." method="_on_tennis_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/volleyball" to="." method="_on_volleyball_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/stick1" to="." method="_on_stick_1_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/stick2" to="." method="_on_stick_2_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/stick3" to="." method="_on_stick_3_toggled"]
